--- a/ingex.html
+++ b/ingex.html
@@ -17,15 +17,15 @@
         
         <div id="board" class="board">
             <!-- El tablero se generaría con JavaScript, aquí muestro la estructura visual -->
-            <div class="cell" id="0" data-row="0" data-col="0"></div>
-            <div class="cell" id="1" data-row="0" data-col="1"></div>
-            <div class="cell" id="2" data-row="0" data-col="2"></div>
-            <div class="cell" id="3" data-row="1" data-col="0"></div>
-            <div class="cell" id="4" data-row="1" data-col="1"></div>
-            <div class="cell" id="5" data-row="1" data-col="2"></div>
-            <div class="cell" id="6" data-row="2" data-col="0"></div>
-            <div class="cell" id="7" data-row="2" data-col="1"></div>
-            <div class="cell" id="8" data-row="2" data-col="2"></div>
+            <div class="cell" id="0" ></div>
+            <div class="cell" id="1" ></div>
+            <div class="cell" id="2" ></div>
+            <div class="cell" id="3" ></div>
+            <div class="cell" id="4" ></div>
+            <div class="cell" id="5" ></div>
+            <div class="cell" id="6" ></div>
+            <div class="cell" id="7" ></div>
+            <div class="cell" id="8" ></div>
         </div>
         
         <div class="controls">
